manifests/development.yaml
##============================================================================##
#                                                                              #
# SFR DCDW Kubernetes Manifest - DEVELOPMENT                                   #
# This file defines a Kubernetes cluster for deploying the SFR backend         # 
# in a development environment with a set of test data                         #
#                                                                              #
# NOTE: This creates ephermal postgres and elasticsearch instances so do not   #
# do any work in this environment that you would like to persist.              #
# Any function can be run locally with a persistent data store to look at      #
# specific data issues.                                                        #
#                                                                              # 
##============================================================================##

# Deploy RabbitMQ and Redis instances for communication between processes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: communication-apps
  labels:
    app: rabbitmq-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-redis
  template:
    metadata:
      labels:
        app: rabbitmq-redis
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:latest
          ports:
            - containerPort: 5672
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq-redis
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
  clusterIP: 10.97.170.200
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: rabbitmq-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  clusterIP: 10.97.170.100
---
# Deploy a postgres and elastisearch instance for development work
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistence-apps
  labels:
    app: postgresql-elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql-elasticsearch
  template:
    metadata:
      labels:
        app: postgresql-elasticsearch
    spec:
      containers:
        - name: postgresql
          image: postgres:12.4
          ports:
            - containerPort: 5432
        - name: elasticsearch
          image: elasticsearch:6.8.13
          ports:
            - containerPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  selector:
    app: postgresql-elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
  clusterIP: 10.97.170.50
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
spec:
  selector:
    app: postgresql-elasticsearch
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: 10.97.170.25
---
# Start up the API and expose it externally
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sfr-api
  labels:
    app: sfr-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sfr-api
  template:
    metadata:
      labels:
        app: sfr-api
    spec:
      containers:
        - name: api
          image: sfr/dcdw
          args:
            - --process
            - APIProcess 
            - --environment
            - development
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: sfr-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 5000
